--- a/index.html
+++ b/index.html
@@ -4,22 +4,48 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Exercicios</title>
+        <style>
+            body{
+                background: linear-gradient(to left, black, red, orange);
+                font-family: Georgia, 'Times New Roman', Times, serif;
+                display: flex;
+                align-items: center;
+                height: 100vh;
+                flex-direction: column;
+            }
+            h1{
+                background-color: orange;
+                padding: 6px;
+                border-radius: 15px;
+                box-shadow: 2px 2px black;
+            }
+            a{
+                padding: 6px;
+                margin: 5px;
+                text-decoration: none;
+                color: black;
+                background-color: white;
+                border-radius: 15px;
+                border: solid 2px black;
+            }
+    
+        </style>
     </head>
     <body>
         <h1>Exercicios:</h1>
         <ul>
-            <li>
+            <p>
                 <a href="atividade1a.html">atividade 1 A</a>
-            </li>
-            <li>
+            </p>
+            <p>
                 <a href="atividade1b.html">atividade 1 B</a>
-            </li>
-            <li>
+            </p>
+            <p>
                 <a href="atividade2.html">atividade 2</a>
-            </li>
-            <li>
+            </p>
+            <p>
                 <a href="atividade3.html">atividade 3</a>
-            </li>
+            </p>
         </ul>
     </body>
 </html>
