Alterado situação de aprovado de verde para azul

--- a/atividade1a.html
+++ b/atividade1a.html
@@ -45,7 +45,7 @@
                 let situacaoElement = document.getElementById("situacao");
                 if (media >= 6) {
                     situacaoElement.innerHTML = "Aprovado";
-                    situacaoElement.style.color = "green";
+                    situacaoElement.style.color = "blue";
                 } else {
                     situacaoElement.innerHTML = "Reprovado";
                     situacaoElement.style.color = "red";
