Adicionado link pra voltar ao index

--- a/atividade3.html
+++ b/atividade3.html
@@ -41,6 +41,7 @@
         </style>
     </head>
     <body>
+        <a href="index.html">Voltar aos Links</a>
         <h1>The element Object</h1>
         <h2>The appendChild() Method</h2>
         <ul id="lista_de_comidas">
